[package]
name = "data-onion"
version = "0.1.0"
authors = ["Steven Malis <smmalis37@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
itertools = "0.9.0"
etherparse = "0.9.0"
openssl = "0.10.29"
smallvec = "1.4.0"